Implementacao get e delete service
