# src/main/java/com/desafio/scheduling/communication/api/CommunicationDelegateService.java
@@ -1,13 +1,11 @@
 package com.desafio.scheduling.communication.api;
 
 import org.springframework.beans.factory.annotation.Autowired;
-
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 
 import com.desafio.scheduling.communication.model.SchedulingCreationRequest;
 import com.desafio.scheduling.communication.model.SchedulingCreationResponse;
-import com.desafio.scheduling.communication.model.SchedulingDeleteResponse;
 import com.desafio.scheduling.communication.model.SchedulingStatusResponse;
 import com.desafio.scheduling.communication.service.CommunicationSchedulingService;
 import com.google.gson.Gson;
@@ -21,10 +19,10 @@ public class CommunicationDelegateService implements CommunicationApiDelegate{
 	@Autowired
 	private CommunicationSchedulingService communicationSchedulingService;
 	
-	public ResponseEntity<SchedulingDeleteResponse> communicationIdDelete(String id,
+	public ResponseEntity<Void> communicationIdDelete(String id,
 			String xCorrelationID) {
         log.info("API Request = {} with xCorrelationID {}", id, xCorrelationID);
-        ResponseEntity<SchedulingDeleteResponse> response = communicationSchedulingService.delete(id,xCorrelationID);
+        ResponseEntity<Void> response = communicationSchedulingService.delete(id,xCorrelationID);
         log.info("API Response = {}", new Gson().toJson(response));
         return response;
 	}
